swipe fix: threshhold, swipe stuck to return to initial point

--- a/src/app/shared/swipe-confirm/swipe-confirm.component.scss
+++ b/src/app/shared/swipe-confirm/swipe-confirm.component.scss
@@ -71,6 +71,10 @@
       transition: transform 0.3s ease;
     }
   }
+
+  &.returning {
+    transition: all 0.3s ease-out;
+  }
 }
 
 @media (max-width: 600px) {
